# equation

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
examples/: evaluate.rs
src/: evaluator.rs  functions.rs  grammar.pest  lib.rs  operation.rs  parser.rs
