[package]
name = "equation"
version = "0.2.0"
edition = "2021"
authors = ["David White"]
description = "A Rust library for mathematical expression evaluation and simplification"
keywords = ["math", "evaluation", "simplify", "algebra", "expression"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/equation"
repository = "https://github.com/davidrhyswhite/equation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.3"
pest_derive = "2.7.3"
